--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,5 +7,10 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": "."
-  }
+  },
+  "references": [
+    { "path": "packages/socket-contracts" },
+    { "path": "apps/kiosk" },
+    { "path": "apps/scu" }
+  ]
 }
