--- a/apps/kiosk/package.json
+++ b/apps/kiosk/package.json
@@ -16,9 +16,12 @@
     "dgram": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.18",
     "utf-8-validate": "^6.0.5",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "@openpos/socket-contracts": "workspace:*"
+
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
