--- a/apps/scu/package.json
+++ b/apps/scu/package.json
@@ -12,16 +12,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.2",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@openpos/socket-contracts": "workspace:*"
   },
   "dependencies": {
     "dgram": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "ws": "^8.18.3"
+    "socket.io": "^4.8.1"
   }
 }
