--- a/apps/scu/tsconfig.json
+++ b/apps/scu/tsconfig.json
@@ -19,5 +19,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
+  "references": [{ "path": "../../packages/socket-contracts" }]
 }
