--- a/packages/socket-contracts/package.json
+++ b/packages/socket-contracts/package.json
@@ -5,10 +5,16 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     }
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
