--- a/packages/socket-contracts/tsconfig.json
+++ b/packages/socket-contracts/tsconfig.json
@@ -6,9 +6,9 @@
     "emitDeclarationOnly": false,
     "outDir": "dist",
     "rootDir": "src",
-    "module": "ESNext",
+    "module": "nodenext",
     "target": "ES2020",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "nodenext",
     "strict": true
   },
   "include": ["src"]
